--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -36,25 +36,49 @@ $white: #eae3e3;
   display: flex;
   flex-direction: row;
 }
-.moneyWrapper {
+.leftPanel {
+  display: flex;
+  flex-direction: column;
   width: 50%;
   height: 100%;
-
   margin: 20px 10px 20px 20px;
   box-sizing: border-box;
+}
+.TeamWrapper {
+  border-radius: 10px;
+  border: 1px solid rgba(#65c0ba,0.3);
+  height: 30%;
+  width: 100%;
 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.TeamWrapper span {
+  color: $white;
+  display: block;
+
+  font-weight: 500;
+  letter-spacing: 3px;
+  font-size: 1.2em;
+}
+.moneyWrapper {
+  width: 100%;
+  height: 66%;
+
+  margin-top: 4%;
   background: url('../assets/bitcoinBg.png');
   background-size: cover;
 
   border-radius: 10px;
-  border-style: inset;
   border: 1px solid rgba(#65c0ba,0.3);
 
   display: flex;
   flex-direction: column;
   align-items: center;
   font-family: 'Roboto Condensed', sans-serif;
-  padding-top: 100px;
+  padding-top: 20%;
+  box-sizing: border-box;
 }
 .cardWrapper {
   width: 50%;
@@ -130,7 +154,11 @@ $white: #eae3e3;
   align-items: center;
   margin-top: 6px;
   height: 30px;
-  background: rgba(#79b8d1,0.3);
+  color: $white;
+
+  &.select {
+    background: rgba(#79b8d1,0.3);
+  }
 }
 
 .boardContent div {
