--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -246,6 +246,11 @@ $background:#1a2c5b;
   margin-top: 30px;
 }
 
+.buttonDisable {
+  color: #8ea6b4;
+  border-color: #8ea6b4;
+}
+
 @media all and (max-height: 580px) {
   .teamInfo {
     margin-top: 10px;
