--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -247,8 +247,8 @@ $background:#1a2c5b;
 }
 
 .buttonDisable {
-  color: #8ea6b4;
-  border-color: #8ea6b4;
+  color: #8ea6b4 !important;
+  border-color: #8ea6b4 !important;
 }
 
 @media all and (max-height: 580px) {
