--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -3,7 +3,7 @@ $container-background: transparent;
 $white: #eae3e3;
 $background:#1a2c5b;
 .mainWrapper {
-  background: url('../assets/bitcoinWrap.png');
+  background: url('../assets/background-new.png');
   background-size: cover;
   width: 100vw;
   height: 100vh;
